--- a/config/database.yml
+++ b/config/database.yml
@@ -13,6 +13,16 @@ development:
   password: fab2011!
   host: 127.0.0.1
 
+staging:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
+  database: splity
+  pool: 5
+  username: fab
+  password: fab2011!
+  host: 127.0.0.1
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
@@ -23,7 +33,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
+  database: splity
   pool: 5
-  timeout: 5000
+  username: fab
+  password: fab2011!
+  host: 127.0.0.1
